--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ remote_theme: pages-themes/midnight@v0.2.0
 future: true
 plugins:
   - jekyll-remote-theme
+posts:
+  permalink: /breaking-videogames/:title
